--- a/paginas/academy.html
+++ b/paginas/academy.html
@@ -5,23 +5,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Future </title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
     <link rel="shortcut icon" href="Img/favicon.png" type="image/x-icon">
 </head>
 
 <body>
+
+
     <header>
-        <a href="../index.html">
-            <img class="logo" src="../img/logo future.png" alt="Logo">
-            <nav>
-                <ul>
-                    <li><a href="../index.html"> HOME </a></li>
-                    <li><a href="hairsalon.html"> HAIR SALON </a></li>
-                    <li><a href="academy.html"> ACADEMY </a></li>
-                    <li><a href="about.html"> ABOUT </a></li>
-                    <li><a href="contact.html"> CONTACT </a></li>
-                </ul>
-            </nav>
+        <div class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="../index.html">
+                    <img class="logo" src="../img/logo future.png" alt="logo">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <nav class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav styleFonts">
+                        <li class="nav-item">
+                            <a class="nav-link text-reset" href="../index.html">home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-reset" href="hairsalon.html">hair salon</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-reset" href="academy.html">hair academy</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-reset" href="about.html">about</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-reset" href="contact.html">contact</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
     </header>
 
     <main class="contenedorPadreHair">
@@ -42,19 +65,18 @@
 
     <div class="contenedorPadreAbout">
         <div class="fondoAbout alineacion">
-        <h2 class="titulo About"> SUSCRIBITE </h2>
+            <h2 class="titulo about"> SUSCRIBITE </h2>
 
-        <p class="cuerpoTexto About"> para enterarte de nuestro próximo evento </p>
+            <p class="cuerpoTexto about"> para enterarte de nuestro próximo evento </p>
 
-        <form>
-
-            <label class="About" for="email"> E-mail </label>
-            <input type="email" id="email">
-
-            <input type="submit">
-
-        </form>
-    </div>
+            <form>
+                <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label email">Email</label>
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                </div>
+                <button type="submit" class="btn btn-primary botonFormulario">Enviar</button>
+            </form>
+        </div>
     </div>
 
     <div class="contenedorImg">
@@ -68,6 +90,9 @@
         </footer>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
