--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
         <section class="contenedorPadre">
             <div class="contenedorHijo alineacion">
-                <h2 class="titulo"> FUTURE ACADEMY </h2>
+                <h2 class="titulo"> FUTURE HAIR ACADEMY </h2>
 
                 <p class="cuerpoTexto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit fugit
                     consequuntur asperiores quos sunt
@@ -86,7 +86,7 @@
         </section>
 
         <section class="contenedorPadreAbout">
-            <div class="fondoAbout .alineacion">
+            <div class="fondoAbout alineacion">
                 <h2 class="titulo about"> ABOUT </h2>
 
                 <p class="cuerpoTexto about"> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id architecto placeat,
