--- a/paginas/academy.html
+++ b/paginas/academy.html
@@ -70,11 +70,13 @@
             <p class="cuerpoTexto about"> para enterarte de nuestro próximo evento </p>
 
             <form>
-                <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label email">Email</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                </div>
-                <button type="submit" class="btn btn-primary botonFormulario">Enviar</button>
+
+                <label for="email"></label>
+                <input class="campos" type="email" id="email" placeholder="E-mail">
+
+
+                <input class="botonFormulario" type="submit">
+
             </form>
         </div>
     </div>
