--- a/paginas/contact.html
+++ b/paginas/contact.html
@@ -55,8 +55,8 @@
             <h3> Visitanos </h3>
 
         </div>
-        <div class="contenedorHijo">
-            <iframe
+        <div class="mapaContainer">
+            <iframe class="map"
                 src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13087.43348030113!2d-54.9561887!3d-34.9100036!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95751b3757b056f1%3A0x4ccab679af321f3f!2sFuture%20hair%20salon%20%26%20academy!5e0!3m2!1ses-419!2suy!4v1688404562400!5m2!1ses-419!2suy"
                 width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -65,6 +65,10 @@
 
     <div class="contenedorPadreAbout">
         <div class="fondoAbout alineacion">
+
+            <h2 class="titulo about"> contacto </h2>
+
+
             <form>
 
                 <label for="nombre"></label>
@@ -77,7 +81,7 @@
                 <input class="campos" type="email" id="email" placeholder="E-mail">
     
                 <label for="mensaje"></label>
-                <textarea class="campos" name="" id="mensaje" cols="30" rows="10"
+                <textarea class="campos textarea" name="" id="mensaje" cols="30" rows="10"
                     placeholder="Ingrese su mensaje"></textarea>
     
                 <input class="botonFormulario" type="submit">
@@ -97,6 +101,10 @@
             <h4 class="directionFooter"> Rambla Artigas y calle 17, Punta del este </h4>
         </footer>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+    crossorigin="anonymous"></script>
 
 </body>
 
