--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="shortcut icon" href="paginas/img/favicon.png" type="image/x-icon">
+    <meta name="description" content="Future es un salón creativo y experimental en manos de estilistas expertos que te ayudarán a crear un futuro lleno de confianza y actitud. Desde cortes vanguardistas hasta colores deslumbrantes, ¡agenda tu turno hoy mismo!"> 
+    <meta name="keywords" content="peluquería, estilismo, cortes de cabello, colores de cabello, belleza, Uruguay">
 </head>
 
 <body>
