--- a/paginas/academy.html
+++ b/paginas/academy.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Future </title>
+    <title> Future Hair Academy </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
     <link rel="shortcut icon" href="Img/favicon.png" type="image/x-icon">
+    <meta name="description" content="Potenciá tus habilidades mejorando tu táctica y precisión en nuestro curso de fundamentos esenciales para desarrollar cortes de pelo">
+    <meta name="keywords" content="peluquería, estilismo, curso peluquería, aprender peluquería">
 </head>
 
 <body>
