--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="shortcut icon" href="paginas/img/favicon.png" type="image/x-icon">
     <meta name="description" content="Future es un salón creativo y experimental en manos de estilistas expertos que te ayudarán a crear un futuro lleno de confianza y actitud. Desde cortes vanguardistas hasta colores deslumbrantes, ¡agenda tu turno hoy mismo!"> 
     <meta name="keywords" content="peluquería, estilismo, cortes de cabello, colores de cabello, belleza, Uruguay">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
 </head>
 
 <body>
@@ -53,7 +55,7 @@
                 <img class="agusDos" src="img/AgusDos.jpg" alt="Imagen de corte de pelo">
             </div>
 
-            <div class="contenedorHijo alineacion">
+            <div class="contenedorHijo alineacion ">
                 <a href="index.html">
                     <h1 class="titulo"> FUTURE HAIR SALON </h1>
                 </a>
@@ -108,6 +110,10 @@
         </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+      </script>
 </body>
 
 </html>
