--- a/paginas/about.html
+++ b/paginas/about.html
@@ -11,6 +11,8 @@
     <link rel="shortcut icon" href="Img/favicon.png" type="image/x-icon">
     <meta name="description" content="Future es un salón creativo y experimental en manos de estilistas expertos que te ayudarán a crear un futuro lleno de confianza y actitud. Desde cortes vanguardistas hasta colores deslumbrantes, ¡agenda tu turno hoy mismo!">
     <meta name="keywords" content="peluquería, estilismo, cortes de pelo, colores de cabello, belleza, Uruguay">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
 </head>
 </head>
 
@@ -77,6 +79,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+        <script>
+            AOS.init();
+          </script>
 </body>
 
 </html>
