--- a/paginas/academy.html
+++ b/paginas/academy.html
@@ -11,6 +11,8 @@
     <link rel="shortcut icon" href="Img/favicon.png" type="image/x-icon">
     <meta name="description" content="Potenciá tus habilidades mejorando tu táctica y precisión en nuestro curso de fundamentos esenciales para desarrollar cortes de pelo">
     <meta name="keywords" content="peluquería, estilismo, curso peluquería, aprender peluquería">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
 </head>
 
 <body>
@@ -97,6 +99,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+        <script>
+            AOS.init();
+          </script>
 </body>
 
 </html>
