--- a/index.html
+++ b/index.html
@@ -60,11 +60,7 @@
                     <h1 class="titulo"> FUTURE HAIR SALON </h1>
                 </a>
 
-                <p class="cuerpoTexto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit fugit
-                    consequuntur asperiores quos sunt
-                    dolorem facere officia incidunt. Libero possimus reiciendis veritatis illo nobis omnis atque
-                    quisquam
-                    soluta, commodi impedit!</p>
+                <p class="cuerpoTexto">Encontrá el estilo que te representa</p>
 
                 <button class="button">
                    <span> Ver más </span>
@@ -76,11 +72,7 @@
             <div class="contenedorHijo alineacion">
                 <h2 class="titulo"> FUTURE HAIR ACADEMY </h2>
 
-                <p class="cuerpoTexto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit fugit
-                    consequuntur asperiores quos sunt
-                    dolorem facere officia incidunt. Libero possimus reiciendis veritatis illo nobis omnis atque
-                    quisquam
-                    soluta, commodi impedit!</p>
+                <p class="cuerpoTexto">Animate a dar el próximo paso</p>
 
                 <button class="button">Ver más</button>
             </div>
@@ -93,9 +85,8 @@
             <div class="fondoAbout alineacion">
                 <h2 class="titulo about"> ABOUT </h2>
 
-                <p class="cuerpoTexto about"> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id architecto placeat,
-                    tenetur consequatur fugiat voluptate quia voluptatibus! Fugiat iure cupiditate animi ullam, natus
-                    dicta itaque dolorum omnis, quo accusamus nesciunt.</p>
+                <p class="cuerpoTexto about"> Somos un salón creativo y experimental, trabajamos de forma personalizada con cada cliente para plasmar su mejor versión. 
+                </p>
 
                 <button class="button fondoNegro">Conocenos</button>
             </div>
