--- a/paginas/about.html
+++ b/paginas/about.html
@@ -59,10 +59,10 @@
         <div class="contenedorHijoHairDos alineacion">
             <h2 class="titulo"> ABOUT </h2>
 
-            <p class="cuerpoTexto"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium accusamus
-                totam amet cumque ducimus
-                harum nemo error eum sequi! Impedit hic possimus ex quaerat laudantium quidem nam aperiam, earum
-                sit! </p>
+            <p class="cuerpoTexto"> Felipe es el director y co fundador de Future hair salon & academy.
+                Es el encargado de plasmar la mejor versión en cada uno de nuestros clientes.
+                Su pasaje por Europa y su trayectoria por las mejores peluquerías del país le han permitido tener hoy en día una visión particular al momento de crear cortes de diseño.
+                Todo lo que sucede en el salón tiene su sello personal. </p>
         </div>
     </main>
 
