--- a/paginas/about.html
+++ b/paginas/about.html
@@ -67,7 +67,7 @@
     </main>
 
     <div class="contenedorImg">
-        <img class="img" src="../img/MajuUno.jpg" alt="Imagen de hair style">
+        <img class="img" src="../img/MajuUno.jpg" alt="Hombre luciendo un corte de pelo">
     </div>
 
     <div>
