--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Future </title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="css/estilo.css">
     <link rel="shortcut icon" href="paginas/img/favicon.png" type="image/x-icon">
-    <meta name="description" content="Future es un salón creativo y experimental en manos de estilistas expertos que te ayudarán a crear un futuro lleno de confianza y actitud. Desde cortes vanguardistas hasta colores deslumbrantes, ¡agenda tu turno hoy mismo!"> 
+    <meta name="description"
+        content="Future es un salón creativo y experimental en manos de estilistas expertos que te ayudarán a crear un futuro lleno de confianza y actitud. Desde cortes vanguardistas hasta colores deslumbrantes, ¡agenda tu turno hoy mismo!">
     <meta name="keywords" content="peluquería, estilismo, cortes de cabello, colores de cabello, belleza, Uruguay">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
@@ -27,7 +29,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <nav class="collapse navbar-collapse" id="navbarNav">
-                   <ul class="navbar-nav  styleFonts">
+                    <ul class="navbar-nav  styleFonts">
                         <li class="nav-item">
                             <a class="nav-link text-reset" href="index.html">home</a>
                         </li>
@@ -63,7 +65,7 @@
                 <p class="cuerpoTexto">Encontrá el estilo que te representa</p>
 
                 <button class="button">
-                   <span> Ver más </span>
+                    <span> Ver más </span>
                 </button>
             </div>
         </section>
@@ -85,7 +87,8 @@
             <div class="fondoAbout alineacion">
                 <h2 class="titulo about"> ABOUT </h2>
 
-                <p class="cuerpoTexto about"> Somos un salón creativo y experimental, trabajamos de forma personalizada con cada cliente para plasmar su mejor versión. 
+                <p class="cuerpoTexto about"> Somos un salón creativo y experimental, trabajamos de forma personalizada
+                    con cada cliente para plasmar su mejor versión.
                 </p>
 
                 <button class="button fondoNegro">Conocenos</button>
@@ -100,11 +103,13 @@
             <h4 class="directionFooter"> Rambla Artigas y calle 17, Punta del este </h4>
         </footer>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+        crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
-      </script>
+    </script>
 </body>
 
 </html>
