--- a/paginas/academy.html
+++ b/paginas/academy.html
@@ -9,7 +9,8 @@
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilo.css">
     <link rel="shortcut icon" href="Img/favicon.png" type="image/x-icon">
-    <meta name="description" content="Potenciá tus habilidades mejorando tu táctica y precisión en nuestro curso de fundamentos esenciales para desarrollar cortes de pelo">
+    <meta name="description"
+        content="Potenciá tus habilidades mejorando tu táctica y precisión en nuestro curso de fundamentos esenciales para desarrollar cortes de pelo">
     <meta name="keywords" content="peluquería, estilismo, curso peluquería, aprender peluquería">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
@@ -60,9 +61,8 @@
         <div class="contenedorHijoHairDos alineacion">
             <h2 class="titulo"> FUTURE ACADEMY </h2>
 
-            <p class="cuerpoTexto"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium accusamus
-                totam amet cumque ducimus
-                harum nemo error eum sequi! Impedit hic possimus ex quaerat laudantium quidem nam aperiam, earum sit!
+            <p class="cuerpoTexto"> Vení y divertite con nosotros mientras aprendés el porqué de los fundamentos
+                esenciales para desarrollar el corte de cabello que quieras, mejorando tu técnica y precisión.
             </p>
         </div>
     </main>
@@ -99,10 +99,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
-        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-        <script>
-            AOS.init();
-          </script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
