--- a/paginas/hairsalon.html
+++ b/paginas/hairsalon.html
@@ -9,7 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilo.css">
-    <meta name="description" content="Future es un salón creativo y experimental en manos de estilistas expertos que te ayudarán a crear un futuro lleno de confianza y actitud. Desde cortes vanguardistas hasta colores deslumbrantes, ¡agenda tu turno hoy mismo!">
+    <meta name="description"
+        content="Future es un salón creativo y experimental en manos de estilistas expertos que te ayudarán a crear un futuro lleno de confianza y actitud. Desde cortes vanguardistas hasta colores deslumbrantes, ¡agenda tu turno hoy mismo!">
     <meta name="keywords" content="peluquería, estilismo, cortes de pelo, colores de cabello, belleza, Uruguay">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
@@ -28,7 +29,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <nav class="collapse navbar-collapse" id="navbarNav">
-                   <ul class="navbar-nav styleFonts">
+                    <ul class="navbar-nav styleFonts">
                         <li class="nav-item">
                             <a class="nav-link text-reset" href="../index.html">home</a>
                         </li>
@@ -58,11 +59,8 @@
         </div>
         <div class="contenedorHijoHairDos alineacion">
             <h2 class="titulo"> FUTURE HAIR SALON </h2>
-            <p class="cuerpoTexto">Lorem ipsum dolor sit amet consectetur adipisicing elit. A enim animi praesentium.
-                Quo
-                nobis ducimus non consequuntur natus incidunt modi assumenda distinctio, maxime veritatis similique ad
-                neque
-                odio quibusdam harum.</p>
+            <p class="cuerpoTexto">Somos profesionales capacitados para lograr tu mejor versión a través del visagismo.
+                El color y corte adecuado para cada vos existe, déjalo en nuestras manos.</p>
         </div>
     </div>
 
@@ -83,22 +81,23 @@
     </main>
 
     <div class="contenedorImg">
-        <img class="img" src="../img/LeaUnoo.jpg" alt="imagen de hair style">
+        <img class="img" src="../img/LeaUnoo.jpg" alt="imagen de un chico luciendo su cabellera">
     </div>
-
+    
     <div>
         <footer class="footer">
             <h3 class="futureFooter"> future </h3>
             <h4 class="directionFooter"> Rambla Artigas y calle 17, Punta del este </h4>
         </footer>
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-    crossorigin="anonymous"></script>
+        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+        crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
-      </script>
+    </script>
 </body>
 
 </html>
