--- a/paginas/about.html
+++ b/paginas/about.html
@@ -59,9 +59,9 @@
         <div class="contenedorHijoHairDos alineacion">
             <h2 class="titulo"> ABOUT </h2>
 
-            <p class="cuerpoTexto"> Felipe es el director y co fundador de Future hair salon & academy.
+            <p class="cuerpoTexto"> Felipe es el director y co fundador de Future.
                 Es el encargado de plasmar la mejor versión en cada uno de nuestros clientes.
-                Su pasaje por Europa y su trayectoria por las mejores peluquerías del país le han permitido tener hoy en día una visión particular al momento de crear cortes de diseño.
+                Su pasaje por Europa y su trayectoria por las mejores peluquerías del país le han permitido tener una visión particular al crear cortes de diseño.
                 Todo lo que sucede en el salón tiene su sello personal. </p>
         </div>
     </main>
